@@ -1,3 +1,8 @@
+2015-11-20  Matthew Wahab  <matthew.wahab@arm.com>
+
+	* aarch64.h (AARCH64_FEATURE_V8_1): New.
+	(AARCH64_ARCH_v8_1): Add AARCH64_FEATURE_V8_1.
+
 2015-11-19  Matthew Wahab  <matthew.wahab@arm.com>
 
 	* arm.h (ARM_EXT2_V8_2A): New.
